# logger

./: pyproject.toml  setup.py  teste.py
app/: logger.py
logger.egg-info/: PKG-INFO  top_level.txt
loggerInfo.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt
