[project]
name = "loggerInfo"
version = "0.0.1"
authors = [
  { name="Wesley Marques", email="wesleymr59@gmail.com" },
]
description = "Display of logs in project development"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wesleymr59/logger'"
"Bug Tracker" = "https://github.com/wesleymr59/logger'/issues"